refactor: 协作功能全面清理修复
- 修复分享密码验证死循环：ShareController 验证成功后写入 session 标记
- Filter 内 forward 改 sendRedirect，修复预览页相对路径资源 404 与过滤器链绕过
- FTL 内联 JS 外置为 static/js/collab-*.js（collab-annotation/collab-share/collab-stomp + 本地化 sockjs/stomp），规避 Freemarker 解析 ${} 报 500
- STOMP 在线用户改由 session attributes + SessionDisconnectEvent 清理，修复在线列表只增不减
- 新增 CollaborationInterceptor 统一协作开关守卫（403）、SharePageController、WS 来源白名单配置 collaboration.ws.allowed-origins
- 删除死链路：CollabOperation 全链路、文档锁、无调用方 REST 端点；进入缓存的模型类补 Serializable
- Dockerfile.standalone 同步替换 commonHeader.ftl，修复容器内 office 预览全 500
- .gitignore 增加 server.log