@@ -2,20 +2,28 @@ package cn.keking.web.filter;
 
 import cn.keking.model.collaboration.ShareLink;
 import cn.keking.service.ShareService;
-import jakarta.servlet.*;
+import jakarta.servlet.Filter;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import org.springframework.stereotype.Component;
 
 import java.io.IOException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 /**
  * 分享访问过滤器
- * 拦截 /share/{token} 路径，校验分享链接的有效性
+ * 拦截 /share/{token} 路径，校验分享链接的有效性：
+ * - 链接不存在或已过期 → 404
+ * - 带密码且未验证 → 重定向到 /share-page/{token} 密码页
+ *   （不用 forward：forward 会导致页面相对路径 404 且绕过过滤器链）
+ * - 放行 → 重定向到 /onlinePreview?url=...
  *
  * @author Claude Code
  */
-@Component
 public class ShareAccessFilter implements Filter {
 
     private final ShareService shareService;
@@ -50,22 +58,26 @@ public class ShareAccessFilter implements Filter {
             return;
         }
 
-        // 如果设置了密码，跳转到密码验证页面
+        // 带密码且未验证 → 重定向到密码验证页
         if (link.hasPassword() && !isVerified(httpRequest, token)) {
-            httpRequest.setAttribute("shareToken", token);
-            httpRequest.getRequestDispatcher("/share.ftl").forward(request, response);
+            httpResponse.sendRedirect(contextPath + "/share-page/" + token);
             return;
         }
 
-        // 转发到在线预览
-        String targetUrl = "/onlinePreview?url=" + java.net.URLEncoder.encode(link.getFileUrl(), "UTF-8");
-        httpRequest.getRequestDispatcher(targetUrl).forward(request, response);
+        // 验证通过（或无密码）→ 重定向到在线预览
+        // url 参数必须按 OnlinePreviewController 的约定做 Base64 编码（WebUtils.decodeUrl 解码），
+        // 普通 URL 编码会被当作 Base64 解析失败而进入错误页
+        String encodedUrl = java.util.Base64.getEncoder()
+                .encodeToString(link.getFileUrl().getBytes(StandardCharsets.UTF_8));
+        String targetUrl = contextPath + "/onlinePreview?url="
+                + URLEncoder.encode(encodedUrl, StandardCharsets.UTF_8);
+        httpResponse.sendRedirect(targetUrl);
     }
 
+    /**
+     * 提取令牌（调用方已保证 requestUri 以 prefix 开头）
+     */
     private String extractToken(String requestUri, String prefix) {
-        if (!requestUri.startsWith(prefix)) {
-            return null;
-        }
         String remaining = requestUri.substring(prefix.length());
         // 去掉可能存在的查询参数和路径分隔符
         int slashIndex = remaining.indexOf('/');
@@ -78,15 +90,5 @@ public class ShareAccessFilter implements Filter {
     private boolean isVerified(HttpServletRequest request, String token) {
         String verified = (String) request.getSession().getAttribute("share_verified_" + token);
         return "true".equals(verified);
-    }
-
-    @Override
-    public void init(FilterConfig filterConfig) throws ServletException {
-        Filter.super.init(filterConfig);
-    }
-
-    @Override
-    public void destroy() {
-        Filter.super.destroy();
     }
 }
